--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <label>Số cuộn (reels): </label>
   <input id="reels" type="number" value="3"><br>
-  <label>Số biểu tượng (symbols): </label>
+  <label>Số biểu tượng jackpot (symbols): </label>
   <input id="symbols" type="number" value="6"><br>
   <label>Số giống nhau để thắng: </label>
   <input id="winCount" type="number" value="3"><br>
